syntax = "proto3";
package commonpb;
option go_package = "Dur4nC2/misc/protobuf/commonpb";

message Empty {}

// Request - Common fields used in all gRPC requests
message Request {
  bool Async = 1;
  int64 Timeout = 2;

  string BeaconID = 8;
  string SessionID = 9;
}
  

message Response {
  string Err = 1;
  bool Async = 2;
  string BeaconID = 8;
  string TaskID = 9;
}

// File - A basic file data type
message File {
  string Name = 1;
  bytes Data = 2;
}

// Process - A basic process data type
message Process {
  int32 Pid = 1;
  int32 Ppid = 2;
  string Executable = 3;
  string Owner = 4;
  string Architecture = 7;
  int32 SessionID = 5;
  repeated string CmdLine = 6;
}

message Whoami {
  string username = 1;
}

// EnvVar - Environment variable K/V
message EnvVar {
  string Key = 1;
  string Value = 2;
}